# odoo-module-diff

./: README.md  pyproject.toml
odoo_module_diff/: main.py
